[package]
name = "explain"
version = "0.1.0"
authors = ["Cameron Reikes <cameronreikes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.25.4"
sdl2 = { version = "0.34.5", features = ["bundled"] }
gl = "0.14.0"
image = "0.23.14"
serde_json = "1.0.64"